--- a/config.json
+++ b/config.json
@@ -2,11 +2,20 @@
   "supportsTrack": true,
   "supportsCohorts": false,
   "supportsBackfill": false,
-  "configFields": [{
+  "configFields": [
+    {
     "key": "apiKey",
     "name": "API Key ",
     "sensitive": true,
     "required": true,
     "type": "string"
-  }]
+    },
+    {
+    "key": "favoritePokemon",
+    "name": "Favorite Pokemon",
+    "sensitive": true,
+    "required": false,
+    "type": "string"
+  }
+  ]
 }
